Change font-size to prevent zoom in on ios

--- a/app/assets/stylesheets/components/session-forms.scss
+++ b/app/assets/stylesheets/components/session-forms.scss
@@ -164,6 +164,10 @@ div.logo:hover {
 
   }
 
+  .session-form-modal input {
+    font-size: 16px;
+  }
+
 }
 
 .error-container {
